Sun Sep 12 09:36:37 1999  DanEspen  <dje@blue>

	* icons.html: New page for downloading and viewing the fvwm icons.

	* fvwm-web/generated: added "icon_download" to hold the tgz file
	for downloading the icons.  Added "icon_shots" to hold the gif
	files to picture the icons.

	* developers.html: New file for Fvwm history, (some dates would be
	nice) and links to developer information.

	* index.html: Try to get scrollbars of the main page.
	New page for developer history and links to developer information.
	Go to 3 column link display for Netscape users (maybe a table later).
	Add more links to eliminate the "Docs, FAQ, Other" category.
	"docs.html" is now obsolete.
	Put links in most important first order.	

1999-09-10  Hippo

	* modules.html,mod_initialization.html: added section on how to code
	colorsets

1999-09-08  Dan Espen  <dane@mk.telcordia.com>

	* Moved fvwm-cats into fvwm-web.  Moved the cats changelog here too.

1999-04-15  Bob Woodside  <proteus@pcnet.com>
	* index.html: made the pets' names bold, minor update to my entry.

1999-04-15  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm-cats.html: renamed to index.html

1999-04-14  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm-cats.html: fixed typo

1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: changed latest beta to 2.3.7

Sun Aug 22 19:08:51 1999  DanEspen  <dje@blue>

	* cvs.html: Start describing fvwm-web CVS proceedure.

1999-08-10  Dan Espen  <dane@mk.telcordia.com>

	* 2.2.2 manpages: added.

	* docs.html: Access man pages in generated/manpages directory.

	* generated/run_man2html.sh (curr_section): Add ../../ to reference to
	background jpg.  Default input is ../../fvwm, default output is
	./manpages.

	* index.html: access NEWS in "generated" directory.

	* generated/NEWS.html: Generated NEWS.html from current (2.3.6) source.

	* generated/FAQ.html: Generated FAQ.html from current (2.3.6) source.

	* generated/txt2html.sh: Add ../ to reference to background jpg.
