@@ -16,7 +16,7 @@ Current packages:
 Latest stable Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.2.tar.gz">2.2.2</a></li>
 
 <li>
-Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.7.tar.gz">2.3.7</a></li>
+Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.8.tar.gz">2.3.8</a></li>
 
 <li>
 Latest Alpha Versions: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/testing/">here</a></li>
