@@ -9,7 +9,7 @@
 <CENTER>
 <H1>
 <FONT COLOR="#FFC0CB">The Official </FONT><FONT COLOR="#FF0000">Feline</FONT><FONT COLOR="#FFCCCC">VWM
-Homepa</FONT><FONT COLOR="#FFC0CB">ge - <BLINK>Cats</BLINK> :-)</FONT></H1></CENTER>
+Homepa</FONT><FONT COLOR="#FFC0CB">ge - <FONT COLOR="#FF0000">Cats</FONT> :-)</FONT></H1></CENTER>
 Fvwm2 would not have been possible without the tails, ears and&nbsp; the
 little paws of the coziest beings in the world: our cats. Well, perhaps
 we could have done without the paws. If your pet ever walked straight over
@@ -113,7 +113,7 @@ blackcurrant juice.
 
 <P><TT><FONT COLOR="#FF0000"><FONT SIZE=+2><B>Tiny</B></FONT></FONT></TT>
 <BR>A playful lynx-point Siamese, she probably understands more about the FVWM
-code than I do by now. 
+code than I do by now.
 <TABLE BORDER=0>
 <TR VALIGN=MIDDLE>
 <TD ALIGN=LEFT>
